# aw-plugin-webview

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/webview/: aw_messagelistener.h  aw_webview.h  aw_webviewfactory.h  aw_webviewlistener.h
src/android/: aw_jnimessage.cpp  aw_jnimessage.h  aw_webview_android.cpp  aw_webview_android.h  aw_webviewfactory_android.cpp
src/android/src/com/angelsware/webview/: JsInterface.java  WebView.java
src/default/: aw_webview_default.h  aw_webviewfactory_default.cpp
src/ios/: WebView.swift  WebViewDelegate.h  WebViewDelegate.mm  aw_webview_ios.cpp  aw_webview_ios.h  aw_webviewfactory_ios.cpp
