cmake_minimum_required (VERSION 3.14)
project(aw-plugin-webview)

if("${target}" MATCHES "windows")
	set(TARGET_WIN32 True)
elseif("${target}" MATCHES "linux")
	set(TARGET_LINUX True)
elseif("${target}" MATCHES "android")
	set(TARGET_ANDROID True)
elseif("${target}" MATCHES "ios")
	set(TARGET_IOS True)
else()
	message(FATAL_ERROR "missing target. -Dtarget=<target> (windows,linux)")
endif()

aux_source_directory("${CMAKE_CURRENT_SOURCE_DIR}/src/common" source_files)
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/src/${target}")
	aux_source_directory("src/${target}" source_files)
elseif(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/src/default")
	aux_source_directory("src/default" source_files)
endif()

FILE(GLOB_RECURSE header_files "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h")
add_library("${PROJECT_NAME}" STATIC ${source_files} ${header_files})

include_directories("$ENV{AW_HOME}/include")
target_include_directories("${PROJECT_NAME}" PUBLIC "include")
set_target_properties("${PROJECT_NAME}" PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../lib)
